--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
       <div class="container">
         <ul class="nav">
           <li> <%= link_to 'Logout',destroy_user_session_path,method: "delete"   %></li>
-          <li><%= link_to 'Departments Log',root_path  %></li>
+          <li><%= link_to 'Departments Log',home_path  %></li>
           <li><%= link_to 'Departments',departments_path   %></li>
           <li><%= link_to 'Transactions',transactions_path  %></li>
           <li><%=   %></li>
